force-app/src/objects/fferpcore__VirtualDataObjectProviderFactory__mdt.object
<CustomObject>
    <fields>
        <fullName>fferpcore__ClassName__c</fullName>
        <description>Name of the factory class.</description>
        <inlineHelpText>Name of the factory class.</inlineHelpText>
        <label>Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Data__c</fullName>
        <description>Data required by the provider.</description>
        <inlineHelpText>Data required by the provider.</inlineHelpText>
        <label>Data</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The record is obsolete when checked.</description>
        <inlineHelpText>The record is obsolete when checked.</inlineHelpText>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__Provider__c</fullName>
        <description>The associated source of data, such as an SObjectType.</description>
        <inlineHelpText>The associated source of data, such as an SObjectType.</inlineHelpText>
        <label>Provider</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__VirtualObject__c</fullName>
        <description>The associated generic object.</description>
        <inlineHelpText>The associated generic object.</inlineHelpText>
        <label>Virtual Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Virtual Object Provider Factory</label>
    <pluralLabel>Virtual Object Provider Factories</pluralLabel>
</CustomObject>